# adaptive-cover

./: .gitignore  .ruff.toml  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml
custom_components/: __init__.py
custom_components/adaptive_cover/: __init__.py  binary_sensor.py  button.py  calculation.py  config_flow.py  const.py  coordinator.py  icons.json  room_coordinator.py  select.py  sensor.py  strings.json  switch.py
custom_components/adaptive_cover/translations/: de.json  en.json  es.json  fr.json  nl.json  sk.json
scripts/: setup  test
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_binary_sensor.py  test_button.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_proxy_sensors.py  test_room_coordinator.py  test_select.py  test_sensor.py  test_sun.py  test_switch.py
tests/unit/: __init__.py  test_calculation.py  test_calculation_states.py  test_config_context_adapter.py  test_decision_matrix.py  test_helpers.py
