[project]
name = "adaptive_cover"
version = "0.0.0"
description = "Adaptive Cover - Home Assistant custom integration"
readme = "README.md"
license = {text = "Passive Aggressive License"}
requires-python = ">=3.13"
authors = [{name = "Yi Zhang<yi@zhang.phd>"}]
maintainers = [{name = "Yi Zhang<yi@zhang.phd>"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "homeassistant>=2024.5",
    "pandas>=2.2",
]

[project.urls]
Homepage = "https://github.com/asxzy/adaptive-cover"
Documentation = "https://github.com/asxzy/adaptive-cover"
Repository = "https://github.com/asxzy/adaptive-cover"
"Bug Tracker" = "https://github.com/asxzy/adaptive-cover/issues"
Changelog = "https://github.com/asxzy/adaptive-cover/releases"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pylint>=3.3",
    "ruff>=0.9",
    "colorlog>=6.8",
    "pvlib>=0.11",
    "matplotlib>=3.9",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/adaptive_cover"]

[tool.ruff]
ignore = [
  "ANN101", # Self... explanatory
  "ANN401", # Opiniated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "TID252", # Relative imports
  "RUF012", # Just broken

  # Formatter conflicts
  "COM812",
  "COM819",
  "D206",
  "E501",
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]
select = ["ALL"]
src = ["custom_components/adaptive_cover"]

[tool.ruff.flake8-import-conventions.extend-aliases]
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
voluptuous = "vol"

[tool.ruff.isort]
force-sort-within-sections = true
known-first-party = [
    "homeassistant",
]
combine-as-imports = true

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by ruff
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
  "format",
  "duplicate-code",
  "used-before-assignment",
]
